--- a/Develop/public/index.html
+++ b/Develop/public/index.html
@@ -23,6 +23,7 @@
     </div>
   </div>
   <script src="./assets/js/index.js"></script>
+  <script src="/Develop/server.js"></script>
 </body>
 
 </html>
