--- a/Develop/public/notes.html
+++ b/Develop/public/notes.html
@@ -54,5 +54,6 @@
       </div>
     </div>
     <script src="./assets/js/index.js"></script>
+    <script src="/Develop/server.js"></script>
   </body>
 </html>
